reworked upload photo
