# backend/routes/RouterSub.go
@@ -1,0 +1,14 @@
+package routes
+
+import (
+	"friendship/handlers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterSubRoutes(r *gin.Engine, subH handlers.SubHandler) {
+	sub := r.Group("api/v2/sub")
+	{
+		sub.POST("UploadImg", subH.ChangePhoto)
+	}
+}
